trying to fix scrolling on ios devices

--- a/sidebarStyle.css
+++ b/sidebarStyle.css
@@ -136,6 +136,20 @@ a:hover, a:focus {
 	
 }
 
+#scroller {
+	position: absolute;
+
+	/* Prevent elements to be highlighted on tap */
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+
+	/* Put the scroller into the HW Compositing layer right from the start */
+	-webkit-transform: translateZ(0);
+	-moz-transform: translateZ(0);
+	-ms-transform: translateZ(0);
+	-o-transform: translateZ(0);
+	transform: translateZ(0);
+}
+
 button {
 	padding: 0.6em 1.2em;
 	height: 50px;
@@ -196,6 +210,7 @@ body,
 .st-content {
 	overflow-y: scroll;
 	background: #242424;
+	-webkit-overflow-scrolling: touch;
 }
 
 .st-content,
